# thesis-insect-monitoring

./: .gitignore  .gitmodules  basler.py  calibration.yaml  camera_intrinsics.ipynb  consolidated_data.yaml  deviceenumeration_and_configuration.ipynb  pyproject.toml  pyproject.toml.bak  update_label_bounding_box.ipynb  yolo_train.ipynb
frame_event/: basler.py  prophesee.py
test_scripts/: USB_hardware_trigger_and_chunks.ipynb  basler_stress_test.py  deviceenumeration_and_configuration.ipynb  full_HDR_multiexposure_example.ipynb  grabstrategies.ipynb  stress_test_results.ipynb  update_label_bounding_box.ipynb
yolo_live_labeling/1000epochs_imgsz640/: args.yaml  results.csv
yolo_live_labeling/100epochs_imgsz640/: args.yaml  results.csv
