[project]
name = "thesis-insect-monitoring"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fire==0.4.0",
    "h5py>=3.14.0",
    "kornia>=0.8.1",
    "networkx>=3.5",
    "numba>=0.61.2",
    "plotly[express]>=6.3.0",
    "pypylon>=4.2.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.178",
]

[tool.uv.workspace]
members = [
    "thesis-insect-monitoring",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "opencv-python>=4.12.0.88",
    "video2calibration>=0.0.1",
]
